# amazon-freertos-hello-world

./: .gitmodules  CMakeLists.txt  README.md  build.sh  components.c  monitor.sh
src/: main.c
